feat: implement Spring Security configuration with JWT authentication and OAuth2 support